services/time/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: time
spec:
  selector:
    matchLabels:
      app: s-time
  template:
    metadata:
      labels:
        app: s-time
    spec:
      containers:
      - name: s-time-cntr
        image: localhost:5000/time-srv
        ports:
        - containerPort: 9001
