services/time/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: s-time
  namespace: stage
spec:
  type: NodePort
  ports:
  - name: main
    port: 80
    protocol: TCP
    targetPort: 9001
  selector:
    app: s-time
